@@ -1177,6 +1177,9 @@
         name = "Karol Kozub (automagic)"
     [/entry]
     [entry]
+        name = "Kevin Montalva (Ryckes)"
+    [/entry]
+    [entry]
         name = "Kristoffer Grönlund (kegie)"
     [/entry]
     [entry]
